--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
         <h1>The Portfolio of Scott Weinkauf</h1>
         <nav>
-            <ul>
+            <ul class="navbar">
                 <li>
                     <a href="#about-me">About Me</a>
                 </li>
@@ -32,12 +32,18 @@
         <main class="content">
             <section id="about-me"class="about-me">
                 <h2>About Me</h2>
+                <p>Welcome! My name is Scott Weinkauf. I was born and raised in Topeka, Kansas. I attended Topeka High School, received a Bachelor of Arts Degree from Washburn University, and I am currently studying web development through the University of Kansas.  </p>
             </section>
             <section id="projects" class="projects">
                 <h2>Projects</h2>
             </section>
             <section id="contact" class="contact">
                 <h2>Contact</h2>
+                <ul>
+                    <li>
+                        Email: scott.weinkauf29@gmail.com 
+                    </li>
+                </ul>
             </section>
         </main>
 
