closer to the finish line

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <header class="header">
         <h1>The Portfolio of Scott Weinkauf</h1>
+        </header>
         <nav>
             <ul class="navbar">
                 <li>
@@ -25,17 +26,17 @@
                 </li>
             </ul>
         </nav>
-    </header>
-
         
 
         <main class="content">
+            <img src="./assets/IMG_9926.JPG".> 
             <section id="about-me"class="about-me">
                 <h2>About Me</h2>
-                <p>Welcome! My name is Scott Weinkauf. I was born and raised in Topeka, Kansas. I attended Topeka High School, received a Bachelor of Arts Degree from Washburn University, and I am currently studying web development through the University of Kansas.  </p>
+                <p>Welcome! My name is Scott Weinkauf. I was born and raised in Topeka, Kansas. I attended Topeka High School, received a Bachelor of Arts Degree from Washburn University, and I am currently studying web development through the University of Kansas. Fun Fact about me is that I write/direct/edit movies and I've watched over 200 movies this year alone (2022) </p>
             </section>
             <section id="projects" class="projects">
                 <h2>Projects</h2>
+                <a href="https://sweinkauf.github.io/Accessibility_for_Horiseon/"><img src="./assets/Screen Shot 2022-09-26 at 4.58.25 PM.png" alt="Accessibility_for_Horiseon"></a>
             </section>
             <section id="contact" class="contact">
                 <h2>Contact</h2>
@@ -43,12 +44,15 @@
                     <li>
                         Email: scott.weinkauf29@gmail.com 
                     </li>
+                    <li>
+                        <a href="https://github.com/sweinkauf">My GitHub 😼🐙</a>
+                    </li>
                 </ul>
             </section>
         </main>
 
         <footer>
-            <h3>the end...</h3>
+            <h3>the end...for now</h3>
         </footer>
     </body>
 </html>
