--- a/index.html
+++ b/index.html
@@ -29,14 +29,27 @@
         
 
         <main class="content">
-            <img src="./assets/IMG_9926.JPG".> 
+            
             <section id="about-me"class="about-me">
+                <img src="./assets/IMG_9926.JPG".> 
                 <h2>About Me</h2>
                 <p>Welcome! My name is Scott Weinkauf. I was born and raised in Topeka, Kansas. I attended Topeka High School, received a Bachelor of Arts Degree from Washburn University, and I am currently studying web development through the University of Kansas. Fun Fact about me is that I write/direct/edit movies and I've watched over 200 movies this year alone (2022) </p>
             </section>
             <section id="projects" class="projects">
                 <h2>Projects</h2>
-                <a href="https://sweinkauf.github.io/Accessibility_for_Horiseon/"><img src="./assets/Screen Shot 2022-09-26 at 4.58.25 PM.png" alt="Accessibility_for_Horiseon"></a>
+                <div class="project-1">
+                <a href="https://sweinkauf.github.io/Accessibility_for_Horiseon/"> <h2>hello</h2> </a>
+                </div>
+                <div class="coming-soon">
+                    <a href=""> <img src="./assets/coming soon.webp" alt="coming soon"></a>
+                </div>
+                <div class="coming-soon">
+                    <a href=""> <img src="./assets/coming soon.webp" alt="coming soon"></a>
+                </div>
+                <div class="coming-soon">
+                    <a href=""> <img src="./assets/coming soon.webp" alt="coming soon"></a>
+                </div>
+
             </section>
             <section id="contact" class="contact">
                 <h2>Contact</h2>
