--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             <section id="projects" class="projects">
                 <h2>Projects</h2>
                 <div class="project-1">
-                <a href="https://sweinkauf.github.io/Accessibility_for_Horiseon/"> <h2>hello</h2> </a>
+                <a href="https://sweinkauf.github.io/Accessibility_for_Horiseon/"> <h2>Click Here</h2> </a>
                 </div>
+                <p>For my Accessibility for Horiseon project, I used Html semantic elements, alt attributes, and descriptive title so that the codebase met accessibility standards and Horiseons Webpage is optimized for search engines </p>
                 <div class="coming-soon">
                     <a href=""> <img src="./assets/coming soon.webp" alt="coming soon"></a>
                 </div>
